--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,11 @@ authors = ["haze"]
 edition = "2018"
 
 [dependencies]
-serenity = { path = "/Users/haze/workspace/serenity" }
+crossbeam-utils = "0.6.5"
+regex = "1.1.6"
+lazy_static = "1.3.0"
+failure = "0.1.5"
+
+
+[dependencies.serenity]
+path = "/Users/haze/workspace/serenity"
